task1-hardening/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
        - resources:
            kinds: ["Pod"]
            namespaces: ["payments"]
      validate:
        message: "Images must be pinned to a specific tag/digest, not :latest or untagged"
        pattern:
          spec:
            containers:
            - image: "!*:latest"
