task1-hardening/policies/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-run-as-non-root
      match:
        any:
        - resources:
            kinds: ["Pod"]
            namespaces: ["payments"]
      validate:
        message: "Containers must set runAsNonRoot: true"
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
